@@ -1,3 +1,8 @@
+2006-05-12  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbrsvg.c (rb_rsvg_handle_initialize): use G_INITIALIZE if
+	available.
+
 2006-05-08  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbrsvg.c (Init_rsvg2): Don't use
